2004-12-12 Shane Landrum <epicene@pobox.com>

	* en/Gtk/ToolItem.xml
	* en/Gtk/Toolbar.xml: Expanded docs for toolbar-related classes.
	* en/Gtk/SubmenuDirection.xml
	* en/Gtk/SubmenuPlacement.xml: Docced submenu enums.

2004-12-09  Mike Kestner  <mkestner@novell.com>

	* en/Gtk/HTML*.xml : size_t marshaling updates.

2004-12-08  John Luke  <john.luke@gmail.com>

	* en/Gtk/IconLookupFlags.xml
	* en/Gtk/IconInfo.xml
	* en/Gtk/IconTheme.xml
	* en/Gtk/IconThemeError.xml: doc these

2004-12-08  Mike Kestner  <mkestner@novell.com>

	* en/Art/Affine.xml : some s/int/bool changes.
	* en/Gtk/Expander.xml : a ctor the updater added.

2004-12-06  John Luke  <john.luke@gmail.com>

	* en/Gtk/ComboBoxEntry.xml: doc it
	* en/Gtk/Entry.xml: doc a few missing things
	* en/Gtk/*.xml: run gen-handlerargs-docs.exe for gtk-sharp.dll
	and gen-vm-docs.exe

2004-12-06 Shane Landrum <epicene@pobox.com>

	* en/Gtk/AccelCanActivateHandler.xml
	* en/Gtk/Widget.xml
	* en/Gtk/AccelCanActivateArgs.xml: Added docs for accelerator-related
	signals and handlers.

2004-12-05  John Luke  <john.luke@gmail.com>

	* en/Gtk/Expander.xml: doc it

2004-12-03  Dan Winship  <danw@novell.com>

	* en/Gtk/TextBuffer.xml: 
	* en/Gtk/TextView.xml: update for TextIter pass-by-ref changes

	* en/Gdk/Bitmap.xml: gone

	* en/Gdk/GC.xml:
	* en/Gdk/PangoAttrStipple.xml:
	* en/Gdk/Pixbuf.xml:
	* en/Gdk/Pixmap.xml:
	* en/Gdk/Window.xml:
	* en/Gtk/Drag.xml:
	* en/Gtk/Image.xml:
	* en/Gtk/TextAppearance.xml:
	* en/Gtk/Widget.xml: update for Gdk.Bitmap -> Gdk.Pixmap aliasing
	
2004-12-02 Shane Landrum <epicene@pobox.com>
	
	* en/Gtk/EntryCompletionMatchFunc.xml
	* en/Gtk/EntryCompletion.xml
	* en/Gtk/CellLayout.xml
	* en/Gtk/CellLayoutDataFunc.xml
	* en/Gtk/Clipboard.xml
	* en/Gtk/ClipboardTargetsReceivedFunc.xml
	* en/Gtk/FileFilter.xml
	* en/Gtk/FileFilterFlags.xml
	* en/Gtk/FileFilterFunc.xml: Doc some delegate classes and the
	methods that use them; mostly functionality new to 2.4.
	* en/Gtk/RBTreeTraverseFunc.xml