@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Do not use.</summary>
-    <remarks>To be added</remarks>
+    <remarks>Do not use</remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -27,8 +27,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Do not use</summary>
+        <remarks>Do not use</remarks>
       </Docs>
     </Member>
     <Member MemberName="New">
@@ -41,10 +41,10 @@
         <Parameter Name="raw" Type="System.IntPtr" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gtk.TextLineSegmentClass'</returns>
-        <remarks>To be added</remarks>
+        <summary>Do not use</summary>
+        <param name="raw">Do not use: an object of type 'IntPtr'</param>
+        <returns>Do not use: an object of type 'Gtk.TextLineSegmentClass'</returns>
+        <remarks>Do not use</remarks>
       </Docs>
     </Member>
     <Member MemberName="Name">
@@ -56,8 +56,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Do not use</summary>
+        <remarks>Do not use</remarks>
       </Docs>
     </Member>
     <Member MemberName="LeftGravity">
@@ -69,8 +69,8 @@
       <Parameters>
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Do not use</summary>
+        <remarks>Do not use</remarks>
       </Docs>
     </Member>
   </Members>
