@@ -1354,9 +1354,9 @@ class TextViewSample
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+	<summary>Whether Tab will result in a tab character being entered.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Defaults to true.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Overwrite">
@@ -1367,9 +1367,9 @@ class TextViewSample
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether entered text overwrites existing contents.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>Defaults to false.</remarks>
       </Docs>
     </Member>
   </Members>
