@@ -1,3 +1,14 @@
+2004-12-14 Shane Landrum <epicene@pobox.com>
+
+	* en/Gtk/TextTagInfo.xml
+	* en/Gtk/TextToggleBody.xml
+	* en/Gtk/TextLineSegmentClass.xml
+	* en/Gtk/TextPendingScroll.xml
+	* en/Gtk/TextView.xml
+	* en/Gtk/TextLineSegment.xml: Changed "to be added" to "do not use"
+	* en/Gtk/TextIter.xml
+	* en/Gtk/TextBuffer.xml : Added docs for remaining TBA items.
+	
 2004-12-12 Shane Landrum <epicene@pobox.com>
 
 	* en/Gtk/ToolItem.xml
